--- a/website/pages/templates/base.html
+++ b/website/pages/templates/base.html
@@ -11,7 +11,7 @@
 
 <!-- left & right -->
 <div class="mt-12  ">
-  <div class="fixed">
+  <div class="lg:fixed">
   <p class="text-2xl pt-1 font-mono font-semibold"><a class="text-indigo-600" href="{% url 'home' %}">Zwiwi</a></p>
   <p class="text-sm  px-8 font-mono pt-1">..always with a smile</p>
 </div>
