--- a/website/pages/templates/blog.html
+++ b/website/pages/templates/blog.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Welcome to zwiwi.com{% endblock %}
+{% block title %}Welcome to Blog posts{% endblock %}
 
 {% block content %}
 <!-- right part -->
@@ -17,10 +17,10 @@
             <img src="{{post.image.url}}" class="bg-cover rounded-lg">
          </div>
         <div class="mt-2">
-            <a class="text-xl text-gray-700 font-bold hover:text-gray-600" href="">{{ post.title }}</a>
-            <p class="mt-2 text-gray-500">{{ post.body|truncatewords:20 }}</p>
+            <p class="text-lg font-semibold" href="">{{ post.title }}</p>
+            <p class="mt-2 text-gray-800">{{ post.body|truncatewords:20 }}</p>
         </div>
-        <div class="flex justify-between items-center mt-4">
+        <div class="flex justify-between items-center my-4">
             <a class="text-indigo-600 hover:underline" href="{% url 'ArticleDetail' post.pk %}">Read more</a>
         </div>
     </div>
