--- a/website/pages/templates/article_details.html
+++ b/website/pages/templates/article_details.html
@@ -13,11 +13,19 @@
         <div>
             <img src="{{ post.image.url }}" class="bg-cover rounded-lg">
         </div>
-        <div class="mt-2">
-            <a class="text-lg font-semibold hover:text-gray-600" href="{% url 'ArticleDetail' post.pk %}">{{ post.title }}</a>
-            {% autoescape off %}
-            <p class="mt-2 text-gray-800">{{ post.body}}|linebreaks</p>
-            {% endautoescape %}
+
+        <div class="mt-2 flex justify-between ">
+            <p class="text-lg font-semibold " href="{% url 'ArticleDetail' post.pk %}">{{ post.title }}</p>
+             <p>
+              <a href="{% url 'ArticleUpdate' post.pk %}" class="text-xs hover:underline text-indigo-600 font-mono">(Update Post)</a>
+              <span class="text-black text-xs px-1">/</span>
+              <a href="{% url 'ArticleDelete' post.pk %}" class="text-xs hover:underline text-indigo-600 font-mono">(Delete Post)</a>
+            </p>
+        </div>
+        <div>
+             {% autoescape off %}
+            <p class="mt-2 text-lg text-gray-800">{{ post.body|linebreaks}}</p>
+             {% endautoescape %}
 
         </div>
     </div>
