--- a/website/pages/templates/base.html
+++ b/website/pages/templates/base.html
@@ -6,20 +6,20 @@
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
-<body class="bg-gray-100 lg:mx-16 mx-6 font-serif tracking-wide antialiased">
+<body class="bg-white lg:mx-16 mx-6 font-serif tracking-wide antialiased">
 
 
 <!-- left & right -->
 <div class="mt-12  ">
   <div class="lg:fixed">
-  <p class="text-2xl pt-1 font-mono font-semibold"><a class="text-indigo-600" href="{% url 'home' %}">Zwiwi</a></p>
-  <p class="text-sm  px-8 font-mono pt-1">..always with a smile</p>
+  <p class="text-3xl pt-1 font-mono font-semibold"><a class="text-indigo-600" href="{% url 'home' %}">Zwiwi</a></p>
+  <p class="text-sm  px-8 font-mono pt-0">..always with a smile</p>
 </div>
-  <div class="pt-20 lg:flex">
+  <div class="pt-24 lg:flex">
       <!-- left part -->
       <div class="lg:w-1/4  ">
           <div class="lg:fixed">
-               <ul class="flex lg:flex-col font-semibold mt-2">
+               <ul class="flex lg:flex-col font-semibold mt-2 font-mono">
                   <li class="pr-2 pb-2"><a class="text-indigo-600 hover:underline text-lg " href="{% url 'projects' %}">Projects</a></li>
                   <li class="pr-2 pb-2"><a class="text-indigo-600 hover:underline text-lg " href="{% url 'blog' %}">Blog</a></li>
                   <li class="pr-2 pb-2"><a class="text-indigo-600 hover:underline text-lg " href="{% url 'projects' %}">Discord</a></li>
