--- a/website/pages/templates/blog.html
+++ b/website/pages/templates/blog.html
@@ -16,10 +16,15 @@
 
             <img src="{{post.image.url}}" class="bg-cover rounded-lg">
          </div>
-        <div class="mt-2">
+
+        <div class="mt-2 flex justify-between ">
             <p class="text-lg font-semibold" href="">{{ post.title }}</p>
-            <p class="mt-2 text-gray-800">{{ post.body|truncatewords:20 }}</p>
+            <p>
+            <a href="{% url 'ArticleUpdate' post.pk %}" class="text-xs hover:underline text-indigo-600 font-mono pl-6 ">(Update Post)</a>
+            <span class="text-black text-xs px-1">/</span>
+            <a href="{% url 'ArticleDelete' post.pk %}" class="text-xs hover:underline text-indigo-600 font-mono">(Delete Post)</a>
         </div>
+        <p class="mt-2 text-lg text-gray-800">{{ post.body|truncatewords:20 }}</p>
         <div class="flex justify-between items-center my-4">
             <a class="text-indigo-600 hover:underline" href="{% url 'ArticleDetail' post.pk %}">Read more</a>
         </div>
