--- a/website/pages/templates/home.html
+++ b/website/pages/templates/home.html
@@ -28,16 +28,15 @@
         <div class="pb-20 max-w-lg ">
             <div class="flex justify-between items-start pb-1">
                 <span class="font-light">{{ latest_post.pub_date }}</span>
-                <a class=" text-indigo-600" href="#">#{{ latest_post.tags }} </a></span></a>
+                <a class="text-indigo-600" href="#">#{{ latest_post.tags }} </a></span></a>
             </div>
             <div>
                   <img src="{{ latest_post.image.url }}" class="bg-cover rounded-lg">
-
             </div>
             <div class="mt-2">
-                <p class="text-lg font-semibold">{{ latest_post.title  }}</p>
+                <p class="text-2xl font-semibold">{{ latest_post.title  }}</p>
                 {% autoescape off %}
-                <p class="mt-2 text-gray-800 leading-relaxed">{{ latest_post.body|truncatewords:20|linebreaks  }}</p>
+                <p class="mt-2">{{ latest_post.body|truncatewords:20|linebreaks}}</p>
                 {% endautoescape %}
 
             </div>
