--- a/website/pages/templates/update_post.html
+++ b/website/pages/templates/update_post.html
@@ -3,18 +3,20 @@
 {% block title %} Create an new blog post{% endblock %}
 
 {% block content %}
-<!-- right part -->
- <h1 class="text-lg mt-2 mb-6 font-light font-mono underline">Update Blog Post</h1>
+{% if user.is_authenticated %}
 
+<!-- right part -->
+<h1 class="text-lg mt-2 mb-6 font-light font-mono underline">Update Blog Post</h1>
 
 <form method="POST" enctype="multipart/form-data" class="max-w-md font-mono">
   {% csrf_token %}
   {{form.as_p}}
 <button class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold my-6 py-2 px-4 rounded">Update post</button>
-
 </form>
 
+{% else %}
 
+<p class="text-2xl text-indigo-500 font-semibold">you are not an authorized user </p>
 
-
+{% endif %}
 {% endblock %}
