--- a/website/pages/templates/article_details.html
+++ b/website/pages/templates/article_details.html
@@ -16,15 +16,17 @@
 
         <div class="mt-2 flex justify-between ">
             <p class="text-lg font-semibold " href="{% url 'ArticleDetail' post.pk %}">{{ post.title }}</p>
+            {% if user.is_authenticated %}
              <p>
               <a href="{% url 'ArticleUpdate' post.pk %}" class="text-xs hover:underline text-indigo-600 font-mono">(Update Post)</a>
               <span class="text-black text-xs px-1">/</span>
               <a href="{% url 'ArticleDelete' post.pk %}" class="text-xs hover:underline text-indigo-600 font-mono">(Delete Post)</a>
             </p>
+            {% endif %}
         </div>
         <div>
              {% autoescape off %}
-            <p class="mt-2 text-lg text-gray-800">{{ post.body|linebreaks}}</p>
+            <p class="mt-2 text-lg text-gray-800">{{ post.body|linebreaksbr}}</p>
              {% endautoescape %}
 
         </div>
