--- a/website/pages/templates/add_category.html
+++ b/website/pages/templates/add_category.html
@@ -1,19 +1,19 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %} Create an new blog post{% endblock %}
+{% block title %} Create an new category{% endblock %}
 
 {% block content %}
 
 {% if user.is_authenticated %}
 
 <!-- right part -->
- <h1 class="text-lg mt-2 mb-6 font-light font-mono underline">Add Blog Post</h1>
+ <h1 class="text-lg mt-2 mb-6 font-light font-mono underline">Add Category</h1>
 
 
 <form method="POST" enctype="multipart/form-data" class="max-w-lg font-mono">
   {% csrf_token %}
   {{form.as_p}}
-<button class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold my-6 py-2 px-4 rounded">Add post</button>
+<button class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold my-6 py-2 px-4 rounded">Add category</button>
 
 </form>
 {% else %}
