--- a/website/pages/templates/article_details.html
+++ b/website/pages/templates/article_details.html
@@ -8,7 +8,7 @@
        <div class="flex flex-col max-w-2xl">
         <div class="flex justify-between items-baseline">
             <span class="font-light py-1">{{ post.pub_date }}</span>
-            <a class="px-2 py-1 text-indigo-600" href="#">#{{ post.tags }} </a>
+            <a class="px-2 py-1 text-indigo-600" href="#">#{{ post.category }} </a>
         </div>
         <div>
             <img src="{{ post.image.url }}" class="bg-cover rounded-lg">
