--- a/website/pages/templates/base.html
+++ b/website/pages/templates/base.html
@@ -26,14 +26,19 @@
                {% if user.is_authenticated %}
                   <li class="pr-2 pb-2"><a class="text-indigo-600 hover:underline text-lg" href="{% url 'add_post' %}">Add post</a></li>
                   <li class="pr-2 pb-2"><a class="text-indigo-600 hover:underline text-lg" href="{% url 'logout' %}">Logout</a></li>
-                  {% else %}
-                  <li class="pr-2 pb-2"><a class="text-indigo-600 hover:underline text-lg" href="{% url 'register' %}">Register</a></li>
-                  <li class="pr-2 pb-2"><a class="text-indigo-600 hover:underline text-lg" href="{% url 'login' %}">Login</a></li>
-                  {% endif %}
+                  <li class="pr-2 pb-2"><a class="text-indigo-600 hover:underline text-lg" href="{% url 'add_category' %}">Add category</a></li>
                   <li class="pr-2 pb-2"><a class="text-indigo-600 hover:underline text-lg" href="{% url 'projects' %}">Projects</a></li>
                   <li class="pr-2 pb-2"><a class="text-indigo-600 hover:underline text-lg" href="{% url 'blog' %}">Blog</a></li>
                   <li class="pr-2 pb-2"><a class="text-indigo-600 hover:underline text-lg" href="{% url 'projects' %}">Discord</a></li>
                   <li class="pr-2 pb-2"><a class="text-indigo-600 hover:underline text-lg" href="{% url 'contact' %}">Contact</a></li>
+                  {% else %}
+                  <li class="pr-2 pb-2"><a class="text-indigo-600 hover:underline text-lg" href="{% url 'register' %}">Register</a></li>
+                  <li class="pr-2 pb-2"><a class="text-indigo-600 hover:underline text-lg" href="{% url 'login' %}">Login</a></li>
+                  <li class="pr-2 pb-2"><a class="text-indigo-600 hover:underline text-lg" href="{% url 'projects' %}">Projects</a></li>
+                  <li class="pr-2 pb-2"><a class="text-indigo-600 hover:underline text-lg" href="{% url 'blog' %}">Blog</a></li>
+                  <li class="pr-2 pb-2"><a class="text-indigo-600 hover:underline text-lg" href="{% url 'projects' %}">Discord</a></li>
+                  <li class="pr-2 pb-2"><a class="text-indigo-600 hover:underline text-lg" href="{% url 'contact' %}">Contact</a></li>
+                  {% endif %}
               </ul>
           </div>
       </div>
