--- a/website/pages/templates/blog.html
+++ b/website/pages/templates/blog.html
@@ -10,7 +10,7 @@
      <div class="flex flex-col pb-20 max-w-lg">
         <div class="flex justify-between items-baseline">
             <span class="font-light py-1">{{ post.pub_date }}</span>
-            <a class="px-2 py-1 text-indigo-600" href="#">#{{ post.tags }} </a>
+            <a class="px-2 py-1 text-indigo-600" href="#">#{{ post.category }} </a>
         </div>
         <div>
             <img src="{{post.image.url}}" class="bg-cover rounded-lg">
@@ -40,7 +40,7 @@
 
 {% block sidebar%}
 <!-- sidebar fixed on large screens and hidden on small -->
-<div class="hidden lg:block fixed top-0 mt-64 pt-32 ">
+<div class="hidden lg:block fixed top-0 mt-64 pt-48 ">
     <p class="font-medium text-xl pb-2">The Tags</p>
     <ul class="text-indigo-600 ">
         <li>
